--- a/agentic_ai_langgraph_poc.ipynb
+++ b/agentic_ai_langgraph_poc.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Install apackages"
+        "## Install packages"
       ],
       "metadata": {
         "id": "cgN69eFwpuEv"
